samples/_failures_safe/1761626021_a1f2f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0dabf01.c: In function ‘main’:
./samples/SAFE/__tmp_d0dabf01.c:143:12: error: missing terminating " character
  143 |     printf("Decompression verified successfully
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d0dabf01.c:143:5: error: expected expression at end of input
  143 |     printf("Decompression verified successfully
      |     ^~~~~~
./samples/SAFE/__tmp_d0dabf01.c:143:5: error: expected declaration or statement at end of input
